# src

./: .gitignore  LMNR-31  LMNR-31.pub  README.md  leia_me.txt
dataset_capture/: package.xml  setup.cfg  setup.py
dataset_capture/dataset_capture/: capture_dataset.py
docs/my_drone_controller/: 00-inventario-arquivos-src.md  01-visao-geral.md  02-build-e-execucao.md  03-drone_controller_completo-parte1-setup.md  04-drone_controller_completo-parte2-loop-e-setpoints.md  05-fsm_takeoff.md  06-fsm_hover.md  07-fsm_trajectory.md  08-fsm_landing.md  09-apis-e-exemplos-de-uso.md  10-simulacao-e-tmux.md  11-subscribers-e-callbacks.md  12-main-e-estado0.md  13-waypoint-validation.md  14-command-queue.md  15-codegen-planner-e-controlador.md  16-codegen-helpers-matematicos.md  README.md
drone_control/: CMakeLists.txt  README.md  package.xml
drone_control/launch/: camera_viewer.launch.py  drone_yaw_360.launch.py  mission_three_nodes.launch.py  supervisor_T.launch.py  tf_body_fallback.launch.py  tf_camera_static.launch.py
drone_control/msg/: Waypoint4D.msg  Waypoint4DArray.msg  YawOverride.msg
drone_control/src/: camera_viewer.cpp  camera_viewer.py  drone_activate_and_go_forward.cpp  drone_activate_and_go_forward1.cpp  drone_publish_landing_waypoints.cpp  drone_soft_land.cpp  drone_yaw_360.cpp  landing_mode_a_land_and_takeoff.cpp  landing_mode_b_land_and_disarm.cpp  missao_P_T.cpp  mission_manager.cpp  pouso.cpp  supervisor.cpp  supervisor_T.cpp  takeoff.cpp  takeoff_waypoint_publisher_8s.cpp
drone_custom_control/: README.md  package.xml  setup.py
drone_custom_control/drone_custom_control/nodes/: hover_supervisor_node.py  lpv_mpc_drone_node.py  mavros_takeoff_node.py
drone_custom_control/test/: test_landing_no_pause.py  test_ned_convention.py
mrs_uav_gazebo_simulator/ROMFS/px4fmu_common/init.d-posix/: rcS
mrs_uav_gazebo_simulator/models/mrs_robots_description/sdf/drones/: f450.sdf.jinja
mrs_uav_gazebo_simulator/tmux/one_drone/: rviz.rviz  session.yml
mrs_uav_gazebo_simulator/tmux/one_drone/custom_status/: drone_status_monitor.py  enhanced_sim_status.py
mrs_uav_gazebo_simulator/tmux/one_drone_lidar/: rviz.rviz
my_drone_controller/: CMakeLists.txt  package.xml
my_drone_controller/config/: drone_config.yaml
my_drone_controller/include/: Drone_codegen.h  TrajectoryPlanner_codegen.h  coder_array.h  cos.h  drone_config.h  main_codegen.h  rt_nonfinite.h  rtwtypes.h
my_drone_controller/include/my_drone_controller/: command_queue.hpp  drone_controller_completo.hpp  waypoint_validation.hpp
my_drone_controller/src/: Drone_codegen.cpp  TrajectoryPlanner_codegen.cpp  command_queue.cpp  drone_controller_completo.cpp  fsm_common.cpp  fsm_hover.cpp  fsm_landing.cpp  fsm_state0_wait.cpp  fsm_takeoff.cpp  fsm_trajectory.cpp  integrated_controller.cpp  main.cpp  main_codegen.cpp  minOrMax.cpp  mldivide.cpp  offboard_takeoff.cpp  rt_nonfinite.cpp  test_controller.cpp  waypoint_validation.cpp
yolo_pad_pose/: README.md  package.xml  setup.cfg  setup.py
yolo_pad_pose/launch/: odom_tf_broadcaster.launch.py
yolo_pad_pose/test/: conftest.py  test_base_waypoint_publisher.py  test_jump_filter_reset.py  test_range_filter.py  test_static_tfs.py
yolo_pad_pose/yolo_pad_pose/: base_waypoint_publisher.py  odom_tf_broadcaster.py  pad_waypoint_supervisor.py  yolo_mission_controller.py  yolo_pad_pose_ros2.py
